--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en" style="scroll-behavior: smooth;">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#2F2F2F" />
+    <meta name="description" content="Carlos Valverde is a software developer specialized in both Front and Back with a strong understanding of both.">
+    <meta property="og:title" content="Carlos Valverde">
+    <meta property="og:description" content="Carlos Valverde is a software developer specialized in both Front and Back with a strong understanding of both.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="Carlos Valverde">
+    <meta name="twitter:description" content="Carlos Valverde is a software developer specialized in both Front and Back with a strong understanding of both.">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Carlos Valverde</title>
   </head>
   <body style="overflow-y: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
