--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2F2F2F" />
-    <meta name="description" content="Carlos Valverde is a software developer specialized in both Front and Back with a strong understanding of both.">
+    <meta name="description" content="Carlos Valverde is a software developer specialized in Front-end development with a comprehensive understanding of Back-end technologies">
     <meta property="og:title" content="Carlos Valverde">
-    <meta property="og:description" content="Carlos Valverde is a software developer specialized in both Front and Back with a strong understanding of both.">
+    <meta property="og:description" content="Carlos Valverde is a software developer specialized in Front-end development with a comprehensive understanding of Back-end technologies.">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="Carlos Valverde">
-    <meta name="twitter:description" content="Carlos Valverde is a software developer specialized in both Front and Back with a strong understanding of both.">
+    <meta name="twitter:description" content="Carlos Valverde software developer specialized in Front-end development with a comprehensive understanding of Back-end technologies.">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
